Solves the Leetcode problem 368